# vgrna-project-paper

./: LICENSE  README.md
benchmark_expression/: README.md
benchmark_mapping/real_data/: README.md  calculate_bam_stats.sh
benchmark_mapping/simulated_data/: README.md  calculate_bam_bias.sh
contruct_graph_pantranscriptome/: construct_graph.sh  create_rindex.sh  generate_xg.sh  join_graphs.sh  merge_gbwts.sh  project_transcripts.sh
contruct_graphs_pantranscriptome/: construct_graph.sh  create_rindex.sh  generate_xg.sh  join_graphs.sh  merge_gbwts.sh  project_transcripts.sh
contruct_pantranscriptome/: README.md  generate_xg.sh  merge.sh  project_transcripts.sh  project_transcripts_gene.sh
dockerfiles/: LICENSE  README.md  run.sh
dockerfiles/base/: Dockerfile
dockerfiles/bowtie2/: Dockerfile
dockerfiles/cutadapt/: Dockerfile
dockerfiles/deepvariant/: Dockerfile
dockerfiles/gsnap/: Dockerfile
dockerfiles/hisat2/: Dockerfile
dockerfiles/kallisto/: Dockerfile
dockerfiles/rpvg/: Dockerfile
dockerfiles/rsem/: Dockerfile
dockerfiles/salmon/: Dockerfile
dockerfiles/star/: Dockerfile
dockerfiles/vep/: Dockerfile
dockerfiles/vg/: Dockerfile
dockerfiles/vgdev/: Dockerfile
dockerfiles/vgrna/: Dockerfile
evaluate_expression/: compare_hst.sh
evaluate_mapping/simulated_data/: calculate_bam_stats.sh
index_map/hisat2/: generate_index.sh  inject_alignments.sh  map_reads.sh
index_map/star/: generate_index.sh  inject_alignments.sh  map_reads.sh
index_map/vg/: generate_gcsa.sh  map_reads.sh  surject_alignments.sh
infer_expression/: README.md
infer_expression/kallisto/: README.md  generate_index.sh  infer_expression.sh
infer_expression/rpvg/: README.md  infer_expression.sh
infer_expression/rsem/: README.md  generate_index.sh  infer_expression.sh
infer_expression/salmon/: README.md  generate_index.sh  infer_expression.sh
installation_and_demo/: README.md
map_reads/: README.md
map_reads/hisat2/: README.md  inject_alignments.sh  map_reads.sh  prepare_variants.sh
map_reads/star/: README.md  inject_alignments.sh  map_reads.sh
map_reads/vg/: README.md  generate_distance.sh  map_reads.sh  surject_alignments.sh
mapping_evaluation/real_data/: calculate_bam_stats.sh
mapping_evaluation/simulated_data/: calculate_bam_bias.sh  calculate_gamp_stats.sh
process_data/: README.md  process_genome.sh  process_transcripts.sh  process_variants.sh
scripts/R/: README.md  calc_rsem_fragment_length_stats.R  impute_hla_cds_alleles.R  parse_expression_data.R  plot_allele_specific_expression.R  plot_coverage_correlation.R  plot_coverage_replicate_correlation.R  (+19 more)
scripts/c++/: CMakeLists.txt  README.md
scripts/c++/src/: calc_allele_read_coverage.cpp  calc_exon_read_coverage.cpp  calc_read_regions_overlap_stats.cpp  calc_read_transcript_overlap_stats.cpp  calc_vg_benchmark_stats.cpp  convert_cds_alignments_to_haplotypes.cpp  convert_rsem_sim_info.cpp  convert_snaptron_to_bed.cpp  filter_multi_gene_introns.cpp  utils.hpp
simulate_reads/: README.md  infer_expression.sh  simulate_reads_h1.sh  simulate_reads_h2.sh  surject_transcripts.sh  uniform_expression.sh
(+3854 files in other folders)
